--- a/public/pages/admin/groups/all.html
+++ b/public/pages/admin/groups/all.html
@@ -7,9 +7,12 @@
         </div>
         <div class="panel-body group-info-panel-body">
             <ul class="list-group">
-                <li data-ng-repeat="person in people" class="list-group-item">
-                    <i class="fa fa-user"></i>
-                    {{person.google.name}}
+                <li data-ng-repeat="member in operatorGroup.members | orderBy:'name'" class="list-group-item">
+                   <span class="fa-stack fa-2x">
+                        <i class="fa fa-square fa-stack-2x"></i>
+                        <i class="fa fa-user fa-inverse fa-stack-1x"></i>
+                 </span>
+                    {{member.name}}
                 </li>
             </ul>
         </div>
