--- a/public/pages/admin/index.html
+++ b/public/pages/admin/index.html
@@ -122,7 +122,7 @@
                         </form>
                     </div>
                     <h3 class="text-center text-muted col-xs-12 col-sm-12 col-md-12 col-lg-12">Groups</h3>
-                    <div data-ng-repeat="group in user.groups"
+                    <div data-ng-repeat="group in user.groups | filter:{type:'default'} |  orderBy:'name'"
                          class="panel panel-primary col-xs-12 col-sm-12 col-md-2 col-lg-2 group-summary-panel">
                         <div class="panel-heading group-summary-panel-heading">
                             <h4>
