--- a/public/pages/admin/groups/detail.html
+++ b/public/pages/admin/groups/detail.html
@@ -46,8 +46,9 @@
                         <i class="fa fa-search fa-stack-1x fa-inverse"></i>
                     </span>
                     <span class="permission-title">Discover</span>
-                    <div class="pull-right">
-                        <toggle-switch class="pull-right" ng-model="group.permission.discover" on-text="YES" off-text="NO" on-color="success" off-color="default"></toggle-switch>
+                    <div class="pull-right btn-group">
+                        <input type="button" class="btn btn-default"  ng-model="group.permissions.discover" btn-radio=true value="YES">
+                        <input type="button" class="btn btn-default"  ng-model="group.permissions.discover" btn-radio=false value="NO">
                     </div>
                 </li>
                 <li class="list-group-item">
@@ -56,9 +57,10 @@
                         <i class="fa fa-wrench fa-stack-1x fa-inverse"></i>
                     </span>
                     <span class="permission-title">Configure</span>
-                    <div class="pull-right">
-                    <toggle-switch class="pull-right" ng-model="group.permission.configure" on-text="YES" off-text="NO" on-color="success" off-color="default"></toggle-switch>
-                        </div>
+                    <div class="pull-right btn-group">
+                        <input type="button" class="btn btn-default"  ng-model="group.permissions.configure" btn-radio=true value="YES">
+                        <input type="button" class="btn btn-default"  ng-model="group.permissions.configure" btn-radio=false value="NO">
+                    </div>
                 </li>
                 <li class="list-group-item">
                      <span class="fa-stack fa-lg">
@@ -67,7 +69,10 @@
                     </span>
                     <span class="permission-title">Message</span>
                     <div class="pull-right">
-                        <toggle-switch class="pull-right" ng-model="group.permission.configure" on-text="YES" off-text="NO" on-color="success" off-color="default"></toggle-switch>
+                        <div class="pull-right btn-group">
+                            <input type="button" class="btn btn-default"  ng-model="group.permissions.message" btn-radio=true value="YES">
+                            <input type="button" class="btn btn-default"  ng-model="group.permissions.message" btn-radio=false value="NO">
+                        </div>
                     </div>
                 </li>
             </ul>
