made connector plural

--- a/public/index.html
+++ b/public/index.html
@@ -117,7 +117,7 @@
                     <li id="nav-connector" ng-class="{'active': $state.includes('connector')}">
                         <a href="" ui-sref="connector.devices">
                             <i class="icon-code-fork"></i>
-                            <span>Connector</span>
+                            <span>Connectors</span>
                         </a>
                     </li>
                     <li id="nav-designer" ng-class="{'active': $state.includes('designer')}">
