--- a/public/pages/connector/index.html
+++ b/public/pages/connector/index.html
@@ -6,7 +6,7 @@
                 <div class='page-header page-header-with-buttons'>
                     <h1 class='pull-left'>
                         <i class='icon-code-fork'></i>
-                        <span>Connector</span>
+                        <span>Connectors</span>
                     </h1>
                 </div>
                 <ul class="nav nav-tabs">
