Fixed issue with claiming gateways. Also fixed the error with the carousel not appearing correctly.

--- a/public/pages/connector/devices/index.html
+++ b/public/pages/connector/devices/index.html
@@ -80,7 +80,7 @@
 
 </div>
 
-<div class="row device-panel" ng-repeat="g in claimedGateways | orderBy: 'name'">
+<div class="row device-panel" ng-repeat="g in gateways | orderBy: 'name'">
     <div id="{{g.uuid}}" class="col-sm-2">
         <img class="img-thumbnail col-sm-12" src="/assets/images/network_hub.png" height="64px" width="64px" data-drop="true" jqyoui-droppable="{index: {{$index}}, onDrop:'dropCallback',onOver: 'overCallback', onOut: 'outCallback'}" data-jqyoui-options={{g}}>
     <div class="input-group col-sm-12">
@@ -133,12 +133,10 @@
             <li ng-repeat="smartDevice in smartDevices | orderBy:'name'">
 
                 <div class="channel_icon-grid-view mod-index-0 pop-over"
-                     data-original-title="{{smartDevice.name}} - {{smartDevice.description}}" data-placement="auto"
                      ng-class="{'unavailable':!smartDevice.enabled}">
-                    <a ng-disabled="{{! smartDevice.enabled}}" ng-click="addSmartDevice(smartDevice)"><img
-                        ng-src="{{smartDevice.logo || defaultLogo }}" width="70" height="70" data-drag="{{smartDevice.drag}}" data-jqyoui-options="{revert: 'invalid', zIndex : 1000000, adClasses : true }" ng-model="smartDevice"
-                        jqyoui-draggable="{index: {{$index}}, placeholder : 'keep', animate : true, onStart:'startCallback(smartDevice, $index)', onStop: 'stopCallback', onDrag: 'dragCallback'}"
-                        /></a>
+                    <a ng-disabled="{{! smartDevice.enabled}}" ng-click="addSmartDevice(smartDevice)">
+                        <img ng-src="{{smartDevice.logo || defaultLogo }}" width="70" height="70"  ng-model="smartDevice"/>
+                    </a>
 
               </div>
             </li>
