--- a/public/pages/connector/devices/wizard/find-hub.html
+++ b/public/pages/connector/devices/wizard/find-hub.html
@@ -14,7 +14,7 @@
                 <div class="form-group">
                     <label  class="col-sm-2 control-label">ID</label>
                     <div class="col-sm-10">
-                        <select  class="form-control" ng-change="checkClaim(hubName, selectedHub); notifyHubSelected(selectedHub)" ng-model="selectedHub" ng-required="!selectedHub" ng-options="g.uuid for g in availableGateways">
+                        <select  ng-required="!selectedHub" class="form-control" ng-change="checkClaim(hubName, selectedHub); notifyHubSelected(selectedHub)" ng-model="selectedHub" ng-required="!selectedHub" ng-options="g.uuid for g in availableGateways">
                         </select>
                     </div>
                 </div>
