updated home page

--- a/public/pages/home2.html
+++ b/public/pages/home2.html
@@ -77,18 +77,18 @@ html, body {
       <!-- <img src="/assets/images/hue.jpg" width="100%"> -->
 
       <div class="slide-panel" data-in="top" data-out="top">
-        <div id="spt-5" class="sptext">
+        <div id="spt-1" class="sptext">
           <span class="msg-welcome">Connect & Control </span>
-          <span class="msg-ulysses">Smart Devices</span>
+          <span class="msg-ulysses">Devices</span>
         </div>
       </div>
       <div class="slide-panel" data-in="bottom" data-out="bottom">
-        <div id="spt-6" class="sptext">
+        <div id="spt-2" class="sptext">
           Our Automation Hub allows you to connect devices <u>with & without</u> IP addresses
         </div>
       </div>
       <div class="slide-panel" data-in="left" data-out="left">
-        <div id="spt-7" class="sptext">
+        <div id="spt-3" class="sptext">
           <a type="button" class="btn btn-default-header btn-lg" ng-click="watchVideo()">
                 <b>Watch Video</b>
           </a>
@@ -96,7 +96,7 @@ html, body {
       </div>
       <!-- -->
       <div class="slide-panel" data-in="right" data-out="right">
-        <div id="spt-8" class="sptext">
+        <div id="spt-4" class="sptext">
           <a type="button" class="btn btn-default-header btn-lg cta-button disabled" href="/login">
             <i class="fa fa-chevron-right btn-margin-icon"></i><b>Sign Up Now</b>
           </a>
@@ -107,20 +107,20 @@ html, body {
       <!-- <img src="/assets/images/belkin.jpg" width="100%"> -->
 
       <div class="slide-panel" data-in="top" data-out="top">
-        <div id="spt-5" class="sptext">
+        <div id="spt-1" class="sptext">
           <!-- <img src="/assets/images/ipad-presentation.png"> -->
           <span class="msg-welcome">Integrate  </span>
           <span class="msg-ulysses">Channels</span>
-          <span class="msg-welcome">with Smart Devices </span>
+          <span class="msg-welcome">with Devices </span>
         </div>
       </div>
       <div class="slide-panel" data-in="bottom" data-out="bottom">
-        <div id="spt-6" class="sptext">
+        <div id="spt-2" class="sptext">
           New Systems & APIs being added daily!
         </div>
       </div>
       <div class="slide-panel" data-in="left" data-out="left">
-        <div id="spt-7" class="sptext">
+        <div id="spt-3" class="sptext">
           <a type="button" class="btn btn-default-header btn-lg" ng-click="watchVideo()">
                 <b>Watch Video</b>
           </a>
@@ -128,7 +128,7 @@ html, body {
       </div>
       <!-- -->
       <div class="slide-panel" data-in="right" data-out="right">
-        <div id="spt-8" class="sptext">
+        <div id="spt-4" class="sptext">
           <a type="button" class="btn btn-default-header btn-lg cta-button disabled" href="/login">
             <i class="fa fa-chevron-right btn-margin-icon"></i><b>Sign Up Now</b>
           </a>
@@ -174,8 +174,8 @@ html, body {
       <div class="slide-panel" data-in="top" data-out="top">
         <div id="spt-5" class="sptext">
           <!-- <img src="/assets/images/ipad-presentation.png"> -->
-          <span class="msg-welcome">Big Data & </span>
-          <span class="msg-ulysses">Artificial Intelligence</span>
+          <span class="msg-welcome">BigData &</span>
+          <span class="msg-ulysses">AI</span>
         </div>
       </div>
       <div class="slide-panel" data-in="bottom" data-out="bottom">
@@ -554,7 +554,7 @@ html, body {
 
 <div class="footer">
   <div class="footer-content">
-    <h3 class="section-height"><span class="dashed-border">FOLLOW US</span> USING THE SOCIAL YOU LIKE</h3>
+    <h3 class="section-height"><span class="dashed-border">FOLLOW US ON THESE SOCIAL NETWORKS</span></h3>
     <div class="margin-top-30">
       <a href="http://facebook.com/octoblu" class="footer-icon"><i class="fa fa-facebook fa-2x"></i></a>
       <a href="http://twitter.com/octoblu" class="footer-icon"><i class="fa fa-twitter fa-2x"></i></a>
