updated home page

--- a/public/pages/home2.html
+++ b/public/pages/home2.html
@@ -65,11 +65,9 @@ html, body {
       <!-- -->
       <div class="slide-panel" data-in="right" data-out="right">
         <div id="spt-4" class="sptext">
-          <!-- <a type="button" class="btn btn-default-header btn-lg cta-button" href="/login"> -->
-          <a type="button" class="btn btn-default-header btn-lg cta-button disabled" href="/login">
+          <!-- <a type="button" class="btn btn-default-header btn-lg cta-button disabled" href="/login">
             <i class="fa fa-chevron-right btn-margin-icon disabled"></i><b>Sign Up Now</b>
-            <!-- <i class="fa fa-chevron-right btn-margin-icon"></i><b>Coming Soon</b> -->
-          </a>
+          </a> -->
         </div>
       </div>
     </div>
@@ -97,9 +95,9 @@ html, body {
       <!-- -->
       <div class="slide-panel" data-in="right" data-out="right">
         <div id="spt-4" class="sptext">
-          <a type="button" class="btn btn-default-header btn-lg cta-button disabled" href="/login">
+          <!-- <a type="button" class="btn btn-default-header btn-lg cta-button disabled" href="/login">
             <i class="fa fa-chevron-right btn-margin-icon"></i><b>Sign Up Now</b>
-          </a>
+          </a> -->
         </div>
       </div>
     </div>
@@ -129,9 +127,9 @@ html, body {
       <!-- -->
       <div class="slide-panel" data-in="right" data-out="right">
         <div id="spt-4" class="sptext">
-          <a type="button" class="btn btn-default-header btn-lg cta-button disabled" href="/login">
+          <!-- <a type="button" class="btn btn-default-header btn-lg cta-button disabled" href="/login">
             <i class="fa fa-chevron-right btn-margin-icon"></i><b>Sign Up Now</b>
-          </a>
+          </a> -->
         </div>
       </div>
     </div>
@@ -161,9 +159,9 @@ html, body {
       <!-- -->
       <div class="slide-panel" data-in="right" data-out="right">
         <div id="spt-8" class="sptext">
-          <a type="button" class="btn btn-default-header btn-lg cta-button disabled" href="/login">
+          <!-- <a type="button" class="btn btn-default-header btn-lg cta-button disabled" href="/login">
             <i class="fa fa-chevron-right btn-margin-icon"></i><b>Sign Up Now</b>
-          </a>
+          </a> -->
         </div>
       </div>
     </div>
@@ -193,9 +191,9 @@ html, body {
       <!-- -->
       <div class="slide-panel" data-in="right" data-out="right">
         <div id="spt-8" class="sptext">
-          <a type="button" class="btn btn-default-header btn-lg cta-button disabled" href="/login">
+          <!-- <a type="button" class="btn btn-default-header btn-lg cta-button disabled" href="/login">
             <i class="fa fa-chevron-right btn-margin-icon"></i><b>Sign Up Now</b>
-          </a>
+          </a> -->
         </div>
       </div>
     </div>
