Filtering out invalid gateways that are unclaimed from the list.

--- a/public/pages/connector/devices/index.html
+++ b/public/pages/connector/devices/index.html
@@ -80,7 +80,7 @@
 
 </div>
 
-<div class="row device-panel" ng-repeat="g in gateways | orderBy: 'name'">
+<div class="row device-panel" ng-repeat="g in claimedGateways | orderBy: 'name'">
     <div id="{{g.uuid}}" class="col-sm-2">
         <img class="img-thumbnail col-sm-12" src="/assets/images/network_hub.png" height="64px" width="64px">
     <div class="input-group col-sm-12">
