--- a/public/pages/home2.html
+++ b/public/pages/home2.html
@@ -390,21 +390,21 @@ html, body {
 
 </div><!--Container End-->
 
-<div id="services" class="section">
+<!-- <div id="services" class="section">
 <h3 class="section-height" style="color:white;">PRICING</h3>
 </div>
 
 
 <div class="pricing-bg">
-<div class="container"><!--Container-->
-  <div class="row margin-top-40"><!--Row-->
+<div class="container">
+  <div class="row margin-top-40">
     <h3 class="pricing-bg-title" style="color:black">
       Simple prices that <span class="dashed-border">scale</span> like our platform - as you need.
     </h3>
   </div>
-  <div class="row"><!--Row-->
+  <div class="row">
     <div class="col-md-4 col-xs-8 col-xs-offset-2 col-md-offset-0 margin-top-30">
-    <div class="s-a" data-effect="fromleft" data-delay="0"><!--Animation-->
+    <div class="s-a" data-effect="fromleft" data-delay="0">
       <div class="pricing-table">
         <div class="caption">
           <h3>Starter Plan</h3>
@@ -417,10 +417,10 @@ html, body {
           <a href="/login" class="btn btn-primary btn-lg disabled" role="button">Sign Up Now</a>
         </div>
       </div>
-    </div><!--Animation End-->
+    </div>
     </div>
     <div class="col-md-4 col-xs-8 col-xs-offset-2 col-md-offset-0 margin-top-30">
-    <div class="s-a" data-effect="frombottom" data-delay="100"><!--Animation-->
+    <div class="s-a" data-effect="frombottom" data-delay="100">
       <div class="pricing-table">
         <div class="caption">
           <h3>Most Popular Plan</h3>
@@ -433,10 +433,10 @@ html, body {
           <a href="/login" class="btn btn-primary btn-lg disabled" role="button">Sign Up Now</a>
         </div>
       </div>
-    </div><!--Animation End-->
+    </div>
     </div>
     <div class="col-md-4 col-xs-8 col-xs-offset-2 col-md-offset-0 margin-top-30">
-    <div class="s-a" data-effect="fromright" data-delay="200"><!--Animation-->
+    <div class="s-a" data-effect="fromright" data-delay="200">
       <div class="pricing-table">
         <div class="caption">
           <h3>Enterprise</h3>
@@ -449,12 +449,12 @@ html, body {
           <a href="/login" class="btn btn-primary btn-lg disabled" role="button">Sign Up Now</a>
         </div>
       </div>
-    </div><!--Animation End-->
+    </div>
     </div>
 
-  </div><!--Row End-->
-</div><!--Container End-->
-</div><!--pricing-bg End-->
+  </div>
+</div>
+</div> -->
 
 
 
@@ -495,37 +495,32 @@ html, body {
 <!-- ****************************************** OUR TEAM END ****************************************** -->
 
 
-<!-- ****************************************** PORTFOLIO ****************************************** -->
 <div id="portfolio" class="section-dark">
   <h3 class="section-height" style="color:white;">LATEST WORKS</h3>
 </div>
 
-<!-- ****************************************** PARALLAX IMAGE 3 ****************************************** -->
 <div class="parallax3">
 <div class="parallax-inner3">...</div>
 <div class="parallax-logo">
   <div class="parallax-logo-img">
-    <div class="s-a" data-effect="onlyfade" data-delay="0"><!--Animation-->
-      <!-- <img src="/assets/images/script.svg" style="width: 180px;"> -->
-    </div><!--Animation End-->
+    <div class="s-a" data-effect="onlyfade" data-delay="0">
+    </div>
   </div>
   <div class="parallax-logo-img">
-    <div class="s-a" data-effect="onlyfade" data-delay="100"><!--Animation-->
-      <!-- <img src="/assets/images/carsline.svg" style="width: 200px;"> -->
-    </div><!--Animation End-->
+    <div class="s-a" data-effect="onlyfade" data-delay="100">
+    </div>
   </div>
   <div class="parallax-logo-img">
-    <div class="s-a" data-effect="onlyfade" data-delay="200"><!--Animation-->
-      <!-- <img src="/assets/images/star.svg" style="width: 102px;"> -->
-    </div><!--Animation End-->
+    <div class="s-a" data-effect="onlyfade" data-delay="200">
+    </div>
   </div>
   <div class="parallax-logo-img">
-    <div class="s-a" data-effect="onlyfade" data-delay="300"><!--Animation-->
-      <!-- <img src="/assets/images/givemore.svg" style="width: 200px;"> -->
-    </div><!--Animation End-->
+    <div class="s-a" data-effect="onlyfade" data-delay="300">
+    </div>
   </div>
-</div><!--parallax-logo End-->
-</div><!--parallax3 End-->
+</div>
+</div>
+
 <!-- ****************************************** PARALLAX IMAGE 3 END ****************************************** -->
 
 <!-- <div class="container text-center">
