added tos content

--- a/public/pages/terms.html
+++ b/public/pages/terms.html
@@ -1,6 +1,64 @@
-<div class="jumbotron text-center">
+<div class="jumbotron">
+  <center
   <p><img src="assets/images/robots/robot4.png" width="200"></p>
-  <h1>Terms and Conditions</h1>
+  <h1>Terms and Conditions</h1><br/>
+</center>
 
-  <p></p>
+<p>
+BY CLICKING ON THE “ACCEPT” BUTTON, YOU OR THE ENTITY OR COMPANY THAT YOU REPRESENT (“LICENSEE”) ARE UNCONDITIONALLY CONSENTING TO BE BOUND BY AND ARE BECOMING A PARTY TO THIS LICENSE AGREEMENT (“AGREEMENT”). LICENSEE’S CONTINUED USE OF THE MATERIALS SHALL ALSO CONSTITUTE ASSENT TO THE TERMS OF THIS AGREEMENT. IF LICENSEE DOES NOT UNCONDITIONALLY AGREE TO ALL OF THE TERMS OF THIS AGREEMENT, DO NOT CONTINUE. IF THESE TERMS ARE CONSIDERED AN OFFER, ACCEPTANCE IS EXPRESSLY LIMITED TO THESE TERMS.
+</p>
+
+<ol>
+<li>
+Subject to full compliance with the terms of this Agreement, OCTOBLU, INC. (“OCTOBLU”) hereby grants Licensee a limited, personal, non-sublicensable, non-transferable, royalty-free, nonexclusive license to use its Software Platform and related information and documentation (collectively, the ”Platform”) for the purpose of allowing Licensee to build software applications (each an “Platform”) that communicate with OCTOBLU’s marketplace service (the “Service”), including data uploaded by Licensee to the Service or purchased from third parties through the Service, and for other purposes authorized by OCTOBLU.
+</li>
+
+<li>
+  Licensee must not have a current or proposed program that is competitive with OCTOBLU products or services. If Licensee intends at any time to institute such a program, Licensee will promptly inform OCTOBLU and will not use in that program (whether for advice, review or otherwise) any personnel who have had access to any part of the Platform, and will not use any part of the Platform or any related intellectual property in connection with that program.
+</li>
+
+<li>
+
+Licensee will not disclose (or allow access to) the Platform (or any information derived from it) to any third party and will limit access to the Platform (and any derived information) to employees of Licensee who are developing the App. In support of this obligation, Licensee will apply at least the same security as it uses to protect its own most confidential information. Licensee will not reverse engineer any aspect of the Platform or authorize or encourage anyone else to do so.
+</li>
+
+<li>
+Licensee will not block, disable, hide or limit in any way the ability of any device (whether or not it includes the App) to access the Service or any portion or functionality of or enabled by the Service.
+</li>
+
+<li>
+Further Licensee will not modify, extend, subset or superset the Platform to any extent. Licensee understands that OCTOBLU may cease support of old versions or releases of the Platform.
+</li>
+
+<li>
+At Licensee’s option, subject to OCTOBLU’s consent, Apps may be branded with OCTOBLU specified trademarks in accordance with OCTOBLU’s trademark usage guidelines. OCTOBLU will have the right to perform quality assurance inspections of each App and to withhold rights to use such trademarks if the quality is not satisfactory to OCTOBLU in its sole discretion.
+</li>
+
+<li>
+Licensee hereby grants OCTOBLU a nonexclusive, sublicensable, fully-paid, worldwide license to fully exercise and exploit all patent rights with respect to improvements or extensions created by or for Licensee that are relevant to the Platform or otherwise result from or are enabled by access to the Platform.
+</li>
+
+<li>
+At some point it the future, OCTOBLU may develop an SDK approach to enabling Licensees to build Apps; at that point Licensee’s access to and use of the Platform will become limited to that SDK.
+</li>
+
+<li>
+OCTOBLU PROVIDES THE PLATFORM “AS IS” AND WITHOUT WARRANTY OF ANY KIND, AND HEREBY DISCLAIMS ALL EXPRESS OR IMPLIED WARRANTIES, INCLUDING WITHOUT LIMITATION WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE, PERFORMANCE, ACCURACY, RELIABILITY, AND NON-INFRINGEMENT. THIS DISCLAIMER OF WARRANTY CONSTITUTES AN ESSENTIAL PART OF THIS AGREEMENT. SOME STATES DO NOT ALLOW LIMITATIONS ON HOW LONG AN IMPLIED WARRANTY LASTS SO THE FOREGOING LIMITATIONS MAY NOT APPLY TO LICENSEE.
+</li>
+
+<li>
+LIMITATION OF LIABILITY: UNDER NO CIRCUMSTANCES AND UNDER NO LEGAL THEORY, INCLUDING, BUT NOT LIMITED TO, TORT, CONTRACT, NEGLIGENCE, STRICT LIABILITY, OR OTHERWISE, SHALL OCTOBLU OR ITS SUPPLIERS OR RESELLERS BE LIABLE TO LICENSEE OR ANY OTHER PERSON FOR ANY INDIRECT, SPECIAL, INCIDENTAL, OR CONSEQUENTIAL DAMAGES OF ANY CHARACTER INCLUDING, WITHOUT LIMITATION, DAMAGES FOR LOST PROFITS, LOSS OF GOODWILL, WORK STOPPAGE, ACCURACY OF RESULTS, COMPUTER FAILURE OR MALFUNCTION, OR DAMAGES RESULTING FROM LICENSEE’S USE OF THE PLATFORM. OCTOBLU’S LIABILITY FOR DAMAGES OF ANY KIND WHATSOEVER ARISING OUT OF THIS AGREEMENT SHALL BE LIMITED TO $100. THE
+FOREGOING WILL NOT APPLY TO DAMAGES FOR BODILY INJURY THAT, UNDER APPLICABLE LAW, CANNOT BE SO LIMITED. THE FOREGOING LIMITATIONS SHALL APPLY EVEN IF COMPANY SHALL HAVE BEEN INFORMED OF THE POSSIBILITY OF SUCH DAMAGES. SOME STATES DO NOT ALLOW THE EXCLUSION OR LIMITATION OF INCIDENTAL OR CONSEQUENTIAL DAMAGES, SO THE ABOVE LIMITATION AND EXCLUSION MAY NOT APPLY TO LICENSEE.
+</li>
+
+<li>
+Licensee agrees to OCTOBLU’s Terms of Use and Privacy Policy, made available online at http://www.octoblu.com as those policies may be changed from time to time, which are hereby incorporated by reference into this Agreement. When OCTOBLU changes either such policy in a material way a notice will be posted on the website at http://www.octoblu.com, and when any change is made in either such policy, the updated policy will be posted at the applicable link above or a successor link. It is Licensee’s responsibility to ensure that Licensee understands the terms of each such policy, so Licensee should periodically check the current version of the policy for changes.
+</li>
+
+<li>
+This Agreement represents the complete agreement concerning the subject matter hereof between the parties and supersedes all prior agreements and representations between them. This Agreement may be amended only by a writing executed by both parties. If any provision of this Agreement is held to be unenforceable for any reason, such provision shall be reformed only to the extent necessary to make it enforceable and will in no way alter or negate any other provision of this Agreement. The failure of OCTOBLU to act with respect to a breach of this Agreement by Licensee or others does not constitute a waiver and shall not limit OCTOBLU’s rights with respect to such breach or any subsequent breaches. This Agreement is personal to Licensee and may not be assigned or transferred for any reason whatsoever without OCTOBLU’s consent and any action or conduct in violation of the foregoing shall be void and without effect. OCTOBLU expressly reserves the right to assign this Agreement and to delegate any of its obligations hereunder. This Agreement shall be governed by and construed under the laws of the State of Arizona. The sole and exclusive jurisdiction and venue for actions arising under this Agreement shall be the Courts of the State of Arizona, USA. The party prevailing in any dispute under this Agreement shall be entitled to its costs and legal fees.
+</li>
+</ol>
+
+
 </div>
