home page contect changes

--- a/public/pages/home2.html
+++ b/public/pages/home2.html
@@ -348,7 +348,7 @@ html, body {
         <h3 class="color">SKYNET.im</h3>
         <p class="paragraph"><b>SKYNET</b> connects devices, systems, and people enabling real-time communications for the <b class="color">Internet of Everything</b> via HTTP REST and WebSocket APIs. SKYNET operates as a global cloud-based platform but it can also be deployed as private cloud instances on home networks (including Raspberry Pis) and enterprise networks.</p>
 
-        <p><a href="https://github.com/skynetim/skynet" class="btn btn-default" role="button">GitHub</a></p>
+        <p><a href="https://github.com/skynetim/skynet" class="btn btn-default" role="button"><i class="fa fa-github-alt fa-2x team-social-icon"></i> GitHub</a></p>
       </div>
       </div>
     </div>
@@ -365,7 +365,7 @@ html, body {
       <div class="s-a" data-effect="frombottom" data-delay="300">
         <h3 class="color">SKYNET Hub</h3>
         <p class="paragraph"><b>SKYNET</b> now includes an open source, software-based <b class="color">home automation hub</b> (similar to the Revolv and NinjaBlocks Sphere) that lets you connect devices with and without IP addresses to SKYNET! Our extensible plugin architecture allows you to connect *ANY* device to to SkyNet even older style serial or RF devices.</p>
-        <p><a href="https://github.com/skynetim/hub" class="btn btn-default" role="button">GitHub</a></p>
+        <p><a href="https://github.com/skynetim/hub" class="btn btn-default" role="button"><i class="fa fa-github-alt fa-2x team-social-icon"></i> GitHub</a></p>
       </div>
       </div>
     </div>
@@ -382,7 +382,7 @@ html, body {
       <div class="s-a" data-effect="frombottom" data-delay="500">
         <h3 class="color">SKYNET OS</h3>
         <p class="paragraph"><b>SKYNET</b> now offers a <b class="color">Device Operating System</b> that lets you connect devices such as Arduino, Spark, and Pinoccio to SKYNET without a CPU! These devices simply auto-register and authenticate with SKYNET with a UUID & token and await instructions such as turning pins on/off or streaming sensor data to our cloud.</p>
-        <p><a href="https://github.com/skynetim/skynet_firmware_arduino" class="btn btn-default" role="button">GitHub</a></p>
+        <p><a href="https://github.com/skynetim/skynet_firmware_arduino" class="btn btn-default" role="button"><i class="fa fa-github-alt fa-2x team-social-icon"></i> GitHub</a></p>
       </div>
       </div>
     </div>
