--- a/public/index.html
+++ b/public/index.html
@@ -184,10 +184,7 @@
 
     <!-- build:js scripts/plugins.js -->
     <script src="http://code.jquery.com/jquery-2.0.3.min.js" type="text/javascript"></script>
-    <script src="http://code.jquery.com/jquery-migrate-1.2.1.min.js" type="text/javascript"></script>
     <script src="http://code.jquery.com/ui/1.10.4/jquery-ui.min.js" type="text/javascript"></script>
-    <script src="assets/javascripts/plugins/jquery_ui_touch_punch/jquery.ui.touch-punch.min.js" type="text/javascript"></script>
-    <script src="assets/javascripts/jquery/jquery.cookie.js"></script>
     <script src="assets/javascripts/jquery/jquery.mobile.custom.min.js" type="text/javascript"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.16/angular.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.16/angular-animate.js"></script>
@@ -209,18 +206,13 @@
     <script src="assets/javascripts/angular-ui-utils/ui-utils.min.js"></script>
     <script src="assets/javascripts/angular-google-analytics.js"></script>
     <script src="assets/javascripts/plugins/modernizr/modernizr.min.js" type="text/javascript"></script>
-    <script src="assets/javascripts/canvasjs.min.js" type="text/javascript"></script>
-    <script src="assets/javascripts/plugins/retina/retina.js" type="text/javascript"></script>
-    <script src="assets/javascripts/theme.js" type="text/javascript"></script>
-    <script src="assets/javascripts/plugins/validate/jquery.validate.min.js" type="text/javascript"></script>
-    <script src="assets/javascripts/plugins/validate/additional-methods.js" type="text/javascript"></script>
     <script src="assets/javascripts/jsoneditor/jsoneditor.js" type="text/javascript"></script>
     <script src="assets/javascripts/bootstrap/ui-bootstrap-tpls-0.10.0.min.js"></script>
     <script src="assets/javascripts/isotope.js"></script>
     <script src="assets/javascripts/skroller.js"></script>
     <script src="assets/javascripts/elastic.min.js"></script>
     <script src="assets/javascripts/elasticsearch.angular.js"></script>
-    <script src="assets/javascripts/angular-dragdrop.min.js"></script>
+    <!--<script src="assets/javascripts/angular-dragdrop.min.js"></script>-->
     <script src="assets/javascripts/smoothie.js"></script>
     <!-- endbuild -->
 
@@ -264,36 +256,5 @@
     <script src="angular/controllers/services.js"></script>
     <script src="angular/controllers/signup.js"></script>
     <!-- endbuild -->
-
-    <!--
-      <script>
-        var socket;
-        if($.cookie('skynetuuid') && $.cookie('skynettoken')){
-          // connect to skynet
-          var skynetConfig = {
-            "uuid": $.cookie('skynetuuid'),
-            "token": $.cookie('skynettoken')
-          }
-          skynet(skynetConfig, function (e, skysocket) {
-            if (e) throw e;
-            socket = skysocket;
-          });
-
-        }
-      </script>
-    -->
-
-    <!--<script type="text/javascript">-->
-        <!--/* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */-->
-        <!--var disqus_shortname = 'octoblu'; // required: replace example with your forum shortname-->
-
-        <!--/* * * DON'T EDIT BELOW THIS LINE * * */-->
-        <!--(function () {-->
-            <!--var s = document.createElement('script'); s.async = true;-->
-            <!--s.type = 'text/javascript';-->
-            <!--s.src = '//' + disqus_shortname + '.disqus.com/count.js';-->
-            <!--(document.getElementsByTagName('HEAD')[0] || document.getElementsByTagName('BODY')[0]).appendChild(s);-->
-        <!--}());-->
-    <!--</script>-->
 </body>
 </html>
