--- a/public/index.html
+++ b/public/index.html
@@ -19,22 +19,22 @@
     <title>Octoblu</title>
 
     <!-- SCROLLS -->
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.css">
     <!-- <link href="assets/stylesheets/bootstrap.min.css" rel="stylesheet" media="screen"> -->
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
+    <link href="lib/fontawesome/css/font-awesome.css" rel="stylesheet" >
     <link href="assets/stylesheets/light-theme.css" media="all" id="color-settings-body-color" rel="stylesheet" type="text/css" />
     <link href="assets/stylesheets/theme-colors.css" media="all" rel="stylesheet" type="text/css" />
-    <link href="assets/stylesheets/bootstrap-switch/bootstrap-switch.css" media="all" rel="stylesheet" type="text/css" />
+    <link href="lib/bootstrap-switch/dist/css/bootstrap3/bootstrap-switch.css" media="all" rel="stylesheet" type="text/css" />
     <link href="assets/stylesheets/demo.css" media="all" rel="stylesheet" type="text/css" />
     <link href="assets/stylesheets/erosIntro.css" rel="stylesheet" media="screen">
     <link href="assets/stylesheets/style.css" rel="stylesheet" media="screen">
     <link href="assets/stylesheets/custom.css" rel="stylesheet">
     <link href="assets/stylesheets/animation.css" rel="stylesheet">
-    <link href="assets/stylesheets/font-awesome.min.css" rel="stylesheet" >
+
     <link href="assets/stylesheets/athenaSlide.css" rel="stylesheet">
-    <link href="assets/javascripts/nvd3/nv.d3.min.css" rel="stylesheet">
-    <link href="assets/javascripts/owl.carousel/owl.carousel.css" rel="stylesheet">
-    <link href="assets/javascripts/owl.carousel/owl.theme.css" rel="stylesheet">
+    <link href="lib/nvd3/nv.d3.css" rel="stylesheet">
+    <link href="lib/owl.carousel/dist/assets/owl.carousel.css" rel="stylesheet">
+    <link href="lib/owl.carousel/dist/assets/owl.theme.default.css" rel="stylesheet">
     <!--   <link rel="shortcut icon" href="images/favicon.png"> -->
 
     <script src="assets/javascripts/skynet.js"></script>
@@ -183,37 +183,40 @@
     <footer></footer>
 
     <!-- build:js scripts/plugins.js -->
-    <script src="http://code.jquery.com/jquery-2.0.3.min.js" type="text/javascript"></script>
-    <script src="http://code.jquery.com/ui/1.10.4/jquery-ui.min.js" type="text/javascript"></script>
-    <script src="assets/javascripts/jquery/jquery.mobile.custom.min.js" type="text/javascript"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.16/angular.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.16/angular-animate.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.16/angular-sanitize.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.16/angular-cookies.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.16/angular-resource.js"></script>
-    <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
-    <script src="assets/javascripts/bootstrap-switch/dist/js/bootstrap-switch.min.js"></script>
+    <script src="lib/jquery/dist/jquery.js" type="text/javascript"></script>
+    <script src="lib/jquery-ui/ui/jquery-ui.js" type="text/javascript"></script>
+    <script src="lib/requirejs/require.js" type="text/javascript"></script>
+    <script src="lib/jquery-mobile/js/requirejs.config.js" type="text/javascript"></script>
+    <script src="lib/jquery-mobile/js/jquery.mobile.init.js" type="text/javascript"></script>
+    <script src="lib/jquery-mobile/js/jquery.mobile.define.js" type="text/javascript"></script>
+    <script src="lib/angular/angular.js"></script>
+    <script src="lib/angular-animate/angular-animate.js"></script>
+    <script src="lib/angular-sanitize/angular-sanitize.js"></script>
+    <script src="lib/angular-cookies/angular-cookies.js"></script>
+    <script src="lib/angular-resource/angular-resource.js"></script>
+    <script src="lib/bootstrap/dist/js/bootstrap.js"></script>
+    <script src="lib/bootstrap-switch/dist/js/bootstrap-switch.js"></script>
     <script src="assets/javascripts/athenaSlide.js"></script>
-    <script src="assets/javascripts/underscore.js"></script>
-    <script src="assets/javascripts/d3/d3.min.js"></script>
-    <script src="assets/javascripts/nvd3/nv.d3.min.js"></script>
-    <script src="assets/javascripts/owl.carousel/owl.carousel.min.js"></script>
+    <script src="lib/underscore/underscore.js"></script>
+    <script src="lib/d3/d3.js"></script>
+    <script src="lib/nvd3/nv.d3.js"></script>
+    <script src="lib/owl.carousel/dist/owl.carousel.js"></script>
 
     <!-- endbuild -->
 
     <!-- build:js scripts/modules.js -->
-    <script src="assets/javascripts/angular-ui-router.min.js"></script>
-    <script src="assets/javascripts/angular-ui-utils/ui-utils.min.js"></script>
-    <script src="assets/javascripts/angular-google-analytics.js"></script>
-    <script src="assets/javascripts/plugins/modernizr/modernizr.min.js" type="text/javascript"></script>
-    <script src="assets/javascripts/jsoneditor/jsoneditor.js" type="text/javascript"></script>
-    <script src="assets/javascripts/bootstrap/ui-bootstrap-tpls-0.10.0.min.js"></script>
-    <script src="assets/javascripts/isotope.js"></script>
-    <script src="assets/javascripts/skroller.js"></script>
-    <script src="assets/javascripts/elastic.min.js"></script>
-    <script src="assets/javascripts/elasticsearch.angular.js"></script>
-    <!--<script src="assets/javascripts/angular-dragdrop.min.js"></script>-->
-    <script src="assets/javascripts/smoothie.js"></script>
+    <script src="lib/angular-ui-router/release/angular-ui-router.js"></script>
+    <script src="lib/angular-ui-utils/ui-utils.js"></script>
+    <script src="lib/angular-google-analytics/src/angular-google-analytics.js"></script>
+    <script src="lib/modernizr/modernizr.js" type="text/javascript"></script>
+    <script src="lib/json-editor/dist/jsoneditor.js" type="text/javascript"></script>
+    <script src="lib/angular-bootstrap/ui-bootstrap.js"></script>
+    <script src="lib/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+    <script src="lib/isotope/jquery.isotope.js"></script>
+    <script src="lib/skrollr/dist/skrollr.min.js"></script>
+    <script src="lib/elastic.js/dist/elastic.js"></script>
+    <script src="lib/elasticsearch/elasticsearch.angular.js"></script>
+    <script src="lib/smoothie/smoothie.js"></script>
     <!-- endbuild -->
 
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
