--- a/public/pages/connector/devices/index.html
+++ b/public/pages/connector/devices/index.html
@@ -126,6 +126,9 @@
 
     </div>
 </div>
+<div class="row">
+
+</div>
 <div class="divScroll">
     <div class="scrollWrapper">
         <h2 style="margin-left: 20px;"><i class='icon-off'></i> Add New Device</h2>
