--- a/public/index.html
+++ b/public/index.html
@@ -63,7 +63,7 @@
     <header>
         <nav class="navbar navbar-default navbar-fixed-top">
             <a class="navbar-brand" href="" ui-sref="home">
-                OCTOBLU
+                <img src="/assets/images/octoblu.png" height="50px"/>
             </a>
             <a class="toggle-nav btn pull-left" href="" ng-show="authorization.isAuthenticated">
                 <i class="icon-reorder"></i>
