added logo to initial slide

--- a/public/pages/home2.html
+++ b/public/pages/home2.html
@@ -40,8 +40,9 @@ html, body {
 
       <div class="slide-panel" data-in="top" data-out="top">
         <div id="spt-1" class="sptext">
-          <span class="msg-welcome">Welcome to </span>
-          <span class="msg-ulysses">Octoblu</span>
+          <span class="msg-welcome">Welcome to</span>
+          <img src="/assets/images/octoblu.png" height="100px"/>
+          <!-- <span class="msg-ulysses">Octoblu</span> -->
 
         </div>
       </div>
