added favicon and adjusted stylesheet for gray

--- a/public/index.html
+++ b/public/index.html
@@ -37,6 +37,9 @@
     <link href="assets/javascripts/owl.carousel/owl.theme.css" rel="stylesheet">
     <!--   <link rel="shortcut icon" href="images/favicon.png"> -->
 
+    <link rel="shortcut icon" href="/assets/images/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/assets/images/favicon.ico" type="image/x-icon">    
+
     <script src="assets/javascripts/skynet.js"></script>
 
     <style type="text/css">
