fixed home page api calls

--- a/public/pages/home2.html
+++ b/public/pages/home2.html
@@ -115,7 +115,7 @@ html, body {
       </div>
       <div class="slide-panel" data-in="bottom" data-out="bottom">
         <div id="spt-2" class="sptext">
-          New Systems & APIs being added daily!
+          New channels & smart devices being added daily!
         </div>
       </div>
       <div class="slide-panel" data-in="left" data-out="left">
@@ -208,6 +208,7 @@ html, body {
   <h3 class="section-height" style="color:white;">TOTAL AUTOMATION</h3>
 </div>
 <h3>Available Channels & Smart Devices:</h3>
+<br /><br />
 
 <div id="container" class="isotope">
   <div class="divScroll">
@@ -224,7 +225,7 @@ html, body {
     </div>
   </div>
 </div>
-
+<br /><br /><br />
 
 <div id="services" class="section-dark">
 <h3 class="section-height" style="color:white;">SERVICES</h3>
