--- a/public/index.html
+++ b/public/index.html
@@ -215,7 +215,7 @@
     <script src="lib/json-editor/dist/jsoneditor.js" type="text/javascript"></script>
     <script src="lib/angular-bootstrap/ui-bootstrap.js"></script>
     <script src="lib/angular-bootstrap/ui-bootstrap-tpls.js"></script>
-    <script src="lib/isotope/jquery.isotope.js"></script>
+    <script src="lib/isotope/dist/isotope.pkgd.min.js"></script>
     <script src="lib/skrollr/dist/skrollr.min.js"></script>
     <script src="lib/elastic.js/dist/elastic.js"></script>
     <script src="lib/elasticsearch/elasticsearch.angular.js"></script>
