Fixing Admin Group Detail page.

--- a/public/pages/admin/index.html
+++ b/public/pages/admin/index.html
@@ -6,7 +6,7 @@
  
     @media(min-width: 992px){
         .permissions-panel {
-           margin : 75px 55px 0 55px;
+           margin : 0px 55px 0 55px;
 
         }
     }
@@ -29,11 +29,11 @@
     }
 
 
-    .people-panel .panel-heading .title,.device-panel .panel-heading .title, .people-panel .panel-heading .title {
+   .resource-panel .panel-heading .title {
         color: #ffffff !important;
     }
 
-    .people-panel .panel-heading .title >  a:hover, .device-panel .panel-heading .title > a:hover {
+    .resource-panel .panel-heading .title >  a:hover {
         cursor: hand !important;
         border: 1px solid;
     }
@@ -76,7 +76,7 @@
     }
 
 
-    .admin-group {
+    .resource-panel .panel-footer ul.dropdownmenu {
 
     }
 </style>
