--- a/public/pages/admin/groups/all.html
+++ b/public/pages/admin/groups/all.html
@@ -1,6 +1,6 @@
 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-    <div class="panel  col-xs-12 col-sm-5 col-md-5 col-lg-5 group-info-panel purple-border people-panel">
-        <div class="panel-heading purple-background">
+    <div class="panel  col-xs-12 col-sm-5 col-md-5 col-lg-5 group-info-panel green-border resource-panel">
+        <div class="panel-heading green-background">
             <h3 class="title text-center">
                 <i class="fa fa-user fa-lg" style="margin-right: 5px;"></i>People
             </h3>
@@ -17,8 +17,8 @@
             </ul>
         </div>
     </div>
-    <div class="panel  group-info-panel col-xs-12 col-sm-5 col-md-5 col-lg-5 col-md-offset-1 col-lg-offset-1 grass-green-border device-panel">
-        <div class="panel-heading grass-green-background">
+    <div class="panel  group-info-panel col-xs-12 col-sm-5 col-md-5 col-lg-5 col-md-offset-1 col-lg-offset-1 sea-blue-border resource-panel">
+        <div class="panel-heading sea-blue-background">
             <h3 class="title text-center">
                <i class="fa fa-hdd-o fa-lg"></i> Devices
             </h3>
