--- a/public/pages/admin/groups/detail.html
+++ b/public/pages/admin/groups/detail.html
@@ -1,6 +1,6 @@
     <h2 class="text-center col-xs-12 col-sm-12 col-md-10 col-lg-10">{{ group.name }}</h2>
-    <div class="panel purple-border col-xs-12 col-sm-12 col-md-3 col-lg-3 group-info-panel resource-panel">
-        <div class="panel-heading purple-background">
+    <div class="panel green-border col-xs-12 col-sm-12 col-md-3 col-lg-3 group-info-panel resource-panel">
+        <div class="panel-heading green-background">
             <h3 class="title text-center">
                 <i class="fa fa-bullhorn fa-lg" style="margin-right: 5px;"></i>Sources
             </h3>
@@ -20,17 +20,20 @@
         <div class="panel-footer">
             <div class="input-group col-xs-12 col-sm-12 col-md-12 col-lg-12">
                 <div class="input-group-btn">
-                    <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
+                    <button type="button" class="btn btn-default" data-toggle="dropdown">
                         <i class="fa fa-plus"></i>
                         <span class="caret"></span>
                     </button>
-                    <ul class="dropdown-menu col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                        <li><a href="#">Action</a></li>
-                        <li><a href="#">Another action</a></li>
-                        <li><a href="#">Something else here</a></li>
-                        <li class="divider"></li>
-                        <li><a href="#">Separated link</a></li>
-                    </ul>
+                    <div collapse="sourcePanelCollapsed" class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                        <ul >
+                            <li><a href="#">Action</a></li>
+                            <li><a href="#">Another action</a></li>
+                            <li><a href="#">Something else here</a></li>
+                            <li class="divider"></li>
+                            <li><a href="#">Separated link</a></li>
+                        </ul>
+                    </div>
+
                 </div><!-- /btn-group -->
                 <input type="text" class="form-control">
             </div>
@@ -96,8 +99,8 @@
             </ul>
         </div>
     </div>
-    <div class="panel grass-green-border col-xs-12 col-sm-12 col-md-3 col-lg-3 group-info-panel resource-panel">
-        <div class="panel-heading grass-green-background">
+    <div class="panel sea-blue-border col-xs-12 col-sm-12 col-md-3 col-lg-3 group-info-panel resource-panel">
+        <div class="panel-heading sea-blue-background">
             <h3 class="title text-center">
                 <i class="fa fa-crosshairs fa-lg" style="margin-right: 5px;"></i>Targets
             </h3>
